[gd_scene load_steps=18 format=3 uid="uid://bevhustj3nn14"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_d3jyi"]
[ext_resource type="PackedScene" uid="uid://cxvhspkqahxtp" path="res://scenes/dead_pig.tscn" id="2_8xpa4"]
[ext_resource type="Texture2D" uid="uid://dsgrvbpxyooku" path="res://assets/animation/pig_idle.png" id="3_tgo76"]
[ext_resource type="Texture2D" uid="uid://bynldf85n8w1h" path="res://assets/sprite/BayanganBrute.png" id="3_u54dp"]
[ext_resource type="Texture2D" uid="uid://by7pbv2adhns5" path="res://assets/animation/pig_walking.png" id="4_xyasu"]
[ext_resource type="Texture2D" uid="uid://bm1dmyefwb1uy" path="res://assets/animation/pig_dead.png" id="5_16poi"]
[ext_resource type="AudioStream" uid="uid://c1avxrhrqflbu" path="res://assets/sfx/Hit.ogg" id="7_cls45"]
[ext_resource type="AudioStream" uid="uid://48x4mynwlb27" path="res://assets/sfx/77_flesh_02.ogg" id="8_pb4qd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vmpmn"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_e7rsx"]
resource_name = "Dead"
length = 1.8
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"disable_enemy_hitbox"
}, {
"args": [],
"method": &"spawn_death_body"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_cceqd"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(2.5, 2.5, 2.5, 1), Color(5, 5, 5, 1), Color(2.5, 2.5, 2.5, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_xniij"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IdleSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_md4t1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkingSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IdleSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeadSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_07sfw"]
resource_name = "Walking"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkingSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rq1qo"]
_data = {
"Dead": SubResource("Animation_e7rsx"),
"Hit": SubResource("Animation_cceqd"),
"Idle": SubResource("Animation_xniij"),
"RESET": SubResource("Animation_md4t1"),
"Walking": SubResource("Animation_07sfw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j3cm3"]
radius = 12.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7vp46"]
radius = 80.0

[node name="Pig" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_d3jyi")
death_body_scene = ExtResource("2_8xpa4")
speed = 70.0
knockback_power = 50.0
push_power = 150.0
drawback_power = 50.0

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, 12)
scale = Vector2(1.625, 1)
texture = ExtResource("3_u54dp")

[node name="IdleSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_tgo76")
hframes = 5

[node name="WalkingSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_xyasu")
hframes = 4

[node name="DeadSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_16poi")
hframes = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vmpmn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_rq1qo")
}

[node name="EnemyHurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j3cm3")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_7vp46")

[node name="WanderingTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j3cm3")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cls45")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pb4qd")

[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="WanderingTimer" to="." method="_on_wandering_timer_timeout"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_area_entered"]
